0.40
 - updated japanese translation
 - new status "Obsolete and locally installed" for status view
 - added depends and provides to the "Find tool" window
 - more predefined filters (new, residual config, debconf)

0.39
 - "Installed Files" tab (debian only)
 - added tooltips to status filter tab
 - reworked search dialog, it's possible to search for 
   "name, version, description, maintainer" now
 - better checking if a pkg is not installable 
 - location of the synaptic.desktop file has changed to better integrate  
   with the desktop enviroment

0.38 
 - updated russian translation
 - works on older distros (gtk2.0 and gcc-2.95+ fixes) for real this time :)
 - better man-page
 - if a pkg is not installable, the user gets a warning if the tries to 
   install it
 - improved "by Status" tree-view, displays now by:
   "installed, installed and upgradeable, new in archive, not installed,
    not installed but residual config"
 - sources.list reading is more robust. invalid records are ignored and 
   commented out, comments inside a line are allowed now
   (e.g. "deb http://ftp.debian.org/debian unstable main # my main source")

0.37
 - optimisation of the package view, should be faster now 
   (especially the flat list) 
 - the "update" button for the rgfiltermanager dialog is gone,
   all changes to the filters are tracked automaticly
 - the repository dialog is glade based now
 - some basic support for sources.list.d (thanks Panu)
 - load/save changes is implemeted (you can save your changes and 
   later reload them) 
 - should build with gtk2.0 again (for all people that use RH8.x or 
   UnitedLinux 1.0)
 - a new "not installable" filter was added
 - search for multiple words improved

0.36
 - new filter dialog
 - each filter can have a different view now
 - more easy way to intall suggested/recommended packages
 - dialog to auto install recommended/suggested packages

0.35
 - Synaptic uses a tree view now. Users may select from