@@ -82,6 +82,36 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkCheckButton" id="check_ask_quit">
+		      <property name="border_width">2</property>
+		      <property name="visible">True</property>
+		      <property name="can_focus">True</property>
+		      <property name="label" translatable="yes">Ask to quit after proceeding</property>
+		      <property name="use_underline">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <property name="active">False</property>
+		      <property name="inconsistent">False</property>
+		      <property name="draw_indicator">True</property>
+		    </widget>
+		    <packing>
+		      <property name="padding">0</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkHSeparator" id="hseparator1">
+		      <property name="visible">True</property>
+		    </widget>
+		    <packing>
+		      <property name="padding">0</property>
+		      <property name="expand">False</property>
+		      <property name="fill">True</property>
+		    </packing>
+		  </child>
+
+		  <child>
 		    <widget class="GtkCheckButton" id="check_ask_related">
 		      <property name="border_width">2</property>
 		      <property name="visible">True</property>
@@ -139,21 +169,13 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkCheckButton" id="check_ask_quit">
-		      <property name="border_width">2</property>
+		    <widget class="GtkHSeparator" id="hseparator2">
 		      <property name="visible">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">Ask to quit after proceeding</property>
-		      <property name="use_underline">True</property>
-		      <property name="relief">GTK_RELIEF_NORMAL</property>
-		      <property name="active">False</property>
-		      <property name="inconsistent">False</property>
-		      <property name="draw_indicator">True</property>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
 		      <property name="expand">False</property>
-		      <property name="fill">False</property>
+		      <property name="fill">True</property>
 		    </packing>
 		  </child>
 
@@ -207,6 +229,85 @@
 		      <property name="padding">0</property>
 		      <property name="expand">False</property>
 		      <property name="fill">True</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkHBox" id="hbox2">
+		      <property name="visible">True</property>
+		      <property name="homogeneous">False</property>
+		      <property name="spacing">0</property>
+
+		      <child>
+			<widget class="GtkLabel" id="label38">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Default delete action: </property>
+			  <property name="use_underline">False</property>
+			  <property name="use_markup">False</property>
+			  <property name="justify">GTK_JUSTIFY_LEFT</property>
+			  <property name="wrap">False</property>
+			  <property name="selectable">False</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkOptionMenu" id="optionmenu_delbutton_action">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="history">0</property>
+
+			  <child>
+			    <widget class="GtkMenu" id="menu1">
+
+			      <child>
+				<widget class="GtkMenuItem" id="delete1">
+				  <property name="visible">True</property>
+				  <property name="label" translatable="yes">Delete</property>
+				  <property name="use_underline">True</property>
+				  <signal name="activate" handler="on_delete1_activate" last_modification_time="Wed, 16 Jul 2003 10:04:23 GMT"/>
+				</widget>
+			      </child>
+
+			      <child>
+				<widget class="GtkMenuItem" id="purge1">
+				  <property name="visible">True</property>
+				  <property name="label" translatable="yes">Purge</property>
+				  <property name="use_underline">True</property>
+				  <signal name="activate" handler="on_purge1_activate" last_modification_time="Wed, 16 Jul 2003 10:04:23 GMT"/>
+				</widget>
+			      </child>
+
+			      <child>
+				<widget class="GtkMenuItem" id="delete_with_dependencies1">
+				  <property name="visible">True</property>
+				  <property name="label" translatable="yes">Delete with dependencies</property>
+				  <property name="use_underline">True</property>
+				  <signal name="activate" handler="on_delete_with_dependencies1_activate" last_modification_time="Wed, 16 Jul 2003 10:04:23 GMT"/>
+				</widget>
+			      </child>
+			    </widget>
+			  </child>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
+		    </widget>
+		    <packing>
+		      <property name="padding">0</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
 		    </packing>
 		  </child>
 		</widget>
