@@ -7,11 +7,15 @@
 gchar *s = N_("Options");
 gchar *s = N_("Use regular expressions when searching or matching");
 gchar *s = N_("Use colors in main package list");
+gchar *s = N_("Ask to quit after proceeding");
 gchar *s = N_("Ask when more packages are going to be affected by some action.");
 gchar *s = N_("Use terminal window when running the package manager.");
 gchar *s = N_("Automatically select recommended packages on actions");
-gchar *s = N_("Ask to quit after proceeding");
 gchar *s = N_("Number of possible undo operations");
+gchar *s = N_("Default delete action: ");
+gchar *s = N_("Delete");
+gchar *s = N_("Purge");
+gchar *s = N_("Delete with dependencies");
 gchar *s = N_("Options");
 gchar *s = N_("Leave downloaded packages in the cache");
 gchar *s = N_("Delete downloaded packages after installation");
