@@ -3,6 +3,9 @@
  - new status "Obsolete and locally installed" for status view
  - added depends and provides to the "Find tool" window
  - more predefined filters (new, residual config, debconf)
+ - added "provides" tab
+ - added "remove with dependencies" feature
+ - default action for delete button can be configured
 
 0.39
  - "Installed Files" tab (debian only)
